examples/test/testpolicy6818.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6818
  namespace: namespace138
spec:
  podSelector:
    matchLabels:
      key43: value7
      key0: value47
      key33: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value20
      podSelector:
        matchLabels:
          key26: value5
          key35: value0
          key6: value48
